<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="E_TaskName" Id="{9ea32723-1b60-420f-a328-0455ad01c2a7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_TaskName :
(
//(*
	//New
	EmptyTask :=0,
	ActivateRecipe							:=  1  	,
	ValidateRecipe                          :=  2   ,
	AlarmReset                              :=  3   ,
	ReadRFID                                :=  4   ,
	UpdateLCD                               :=  5   ,
	EnableModule                            :=  6   ,
	DisableModule                           :=  7   ,
	SetLogFileVerbosity                     :=  8   ,
	Initialize                              :=  9   ,
	Resume                                  :=  10  ,
	DoorOpen                                :=  11  ,
	DoorClose                               :=  12  ,
	DPSPower                                :=  13  ,
	UnitPresentCheck                        :=  14  ,
	TrayClamp                               :=  15  ,
	ChangeStackCount                        :=  16  ,
	BypassVision                            :=  17  ,
	TCCSessionRequest                       :=  18  ,
	TIUSlideOut                             :=  19  ,
	PrecisorSlideOut                        :=  20  ,
	SingulateTrayStacker                    :=  21  ,
	SingulateTrayStackerHalf                :=  22  ,
	SingulateTrayStackerRemaining           :=  23  ,
	StackUpTrayStacker                      :=  24  ,
	StopperUp                               :=  25  ,
	MoveConveyorForward                     :=  26  ,
	MoveConveyorBackward                    :=  27  ,
	MoveVisionShuttle                       :=  28  ,
	MoveUPortShuttle                        :=  29  ,
	UPortShuttleReady                       :=  30  ,
	MoveFlyoverShuttle                      :=  31  ,
	FlyoverShuttlePick                      :=  32  ,
	FlyoverShuttlePlace                     :=  33  ,
	MoveTrayScanShuttle                     :=  34  ,
	MoveTrayScanShuttleLifter               :=  35  ,
	EportLatch                              :=  36  ,
	GantryPickAndPlace                      :=  37  ,
	TBOTPickAndPlace                        :=  38  ,
	AutoTeach                               :=  39  ,
	Jog                                     :=  40  ,
	ApplyTeachData                          :=  41  ,
	AbortTeach                              :=  42  ,
	WriteRFIDData                           :=  43  ,
	MoveGantry                              :=  44  ,
	MoveTBOT                                :=  45  ,
	MoveTBOTRetry                           :=  46  ,
	MoveTBOTCancel                          :=  47  ,
	TBOTPickAndPlaceRetry                   :=  48  ,
	TBOTPickAndPlaceCancel                  :=  49  ,
	MoveGantryRetry                         :=  50  ,
	MoveGantryCancel                        :=  51  ,
	GantryPickAndPlaceRetry                 :=  52  ,
	GantryPickAndPlaceCancel                :=  53  ,
	SingulateTrayStackerRetry               :=  54  ,
	SingulateTrayStackerCancel              :=  55  ,
	SingulateTrayStackerHalfRetry           :=  56  ,
	SingulateTrayStackerHalfCancel          :=  57  ,
	SingulateTrayStackerRemainingRetry      :=  58  ,
	SingulateTrayStackerRemainingCancel     :=  59  ,
	StackUpTrayStackerRetry                 :=  60  ,
	StackUpTrayStackerCancel                :=  61  ,
	MoveConveyorForwardRetry                :=  62  ,
	MoveConveyorForwardCancel               :=  63  ,
	MoveConveyorBackwardRetry               :=  64  ,
	MoveConveyorBackwardCancel              :=  65  ,
	MoveVisionShuttleRetry                  :=  66  ,
	MoveVisionShuttleCancel                 :=  67  ,
	MoveUPortShuttleRetry                   :=  68  ,
	MoveUPortShuttleCancel                  :=  69  ,
	MoveFlyoverShuttleRetry                 :=  70  ,
	MoveFlyoverShuttleCancel                :=  71  ,
	MoveTrayScanShuttleRetry                :=  72  ,
	MoveTrayScanShuttleCancel               :=  73  ,
	MoveTrayScanShuttleLifterRetry          :=  74  ,
	MoveTrayScanShuttleLifterCancel         :=  75  ,
	Cancel                                  :=  76  ,
	TIUSlideOutRetry                        :=  77  ,
	TIUSlideOutCancel                       :=  78  ,
	MoveTTSShuttle                          :=  79  ,
	MoveTTSShuttleRetry                     :=  80  ,
	MoveTTSShuttleCancel                    :=  81  ,
	SingulateTrayLatchRemaining             :=  82  ,
	SingulateTrayLatchRemainingRetry        :=  83  ,
	SingulateTrayLatchRemainingCancel       :=  84  ,
	SingulateTrayLatch                      :=  85  ,
	SingulateTrayLatchRetry                 :=  86  ,
	SingulateTrayLatchCancel                :=  87  ,
	StackUpTrayLatch                        :=  88  ,
	StackUpTrayLatchRetry                   :=  89  ,
	StackUpTrayLatchCancel                  :=  90  ,
	SingulateCylinderTray                   :=  91  ,
	SingulateCylinderTrayRetry              :=  92  ,
	SingulateCylinderTrayCancel             :=  93  ,
	StackUpCylinderTray                     :=  94  ,
	StackUpCylinderTrayRetry                :=  95  ,
	StackUpCylinderTrayCancel               :=  96  ,
	SetUPortBlinkRate                       :=  97  ,
	TBotUnitPresentCheck                    :=  98  ,
	AP240ACPOWER                            :=  99  ,
	TesterAirValve                          :=  100 ,
	APAirValve                              :=  101 ,
	DrawerUp                                :=  102 ,
	SetBlinkRate							:=  103 ,
	TIUSocketCoolingAir						:=  104	,
	StackDownTrayStacker					:=	105	,
	StackDownTrayStackerRetry				:=	106	,
	StackDownTrayStackerCancel				:=	107	,
	StackDownTrayStackerRemaining			:=	108	,
	StackDownTrayStackerRemainingRetry		:=	109	,
	StackDownTrayStackerRemainingCancel		:=	110	,
	TTSShuttlePickPlace						:=	111	,
	TTSShuttlePickPlaceCancel				:=	112	,
	TTSShuttlePickPlaceRetry				:=	113	,
	HstTbotPickAndPlace						:=	114	,
	HstTbotPickAndPlaceRetry				:=	115	,
	HstTbotPickAndPlaceCancel				:=	116	,
	StackDownTrayStackerHalf				:=	117	,
	StackDownTrayStackerHalfRetry			:=	118	,
	StackDownTrayStackerHalfCancel			:=	119	,
	SetStackerBlinkRate						:=	120	,
	Ap48DCPower								:=	121	,
	BPAirValve								:=	122	,
	APPCWValve								:=	123	,
	CellLTIMValve							:=	124	,
	MainPCWValve							:=	125	,
	MainOFAValve							:=	126	,
	CmdPower								:=	127	,
	SetSolenoidValves						:=	128	,
	Secondary24VPower						:=	131

);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>